# PCB-BVH-UI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt  error.h  pcb_scene.cpp  pcb_scene.h
UI/: CMakeLists.txt  Viewer.cpp  Viewer.h  ViewerData.cpp  ViewerData.h  frustum.h  look_at.h  null.h  ortho.h  snap_to_fixed_up.h
cmake/: ImGui.cmake
test/: CMakeLists.txt  test_cd.cpp  test_cp.cpp
test/pcb_data/: initial_hard.txt  initial_normal.txt
